--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'java-library'
     // https://gwt-gradle.docstr.org/latest/Configuration
     id "org.docstr.gwt" version "2.1.6"
 }
@@ -13,21 +14,42 @@ repositories {
 }
 
 java {
-    sourceCompatibility =  JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
+
+sourceSets {
+    main {
+        java {
+            srcDirs += 'build/generated/sources/annotationProcessor/java/main'
+        }
+    }
 }
 
 dependencies {
-    implementation 'com.github.gwtmaterialdesign:gwt-material:2.8.3'
-    implementation 'com.github.gwtmaterialdesign:gwt-material-themes:2.8.3'
+    implementation 'org.dominokit:domino-ui:2.0.4'
+    implementation 'org.dominokit:domino-mvp:2.0.0-RC2'
+    implementation 'org.dominokit:domino-mvp-gwt-view:2.0.0-RC2'
+
+    annotationProcessor 'org.dominokit:domino-mvp-apt-client:2.0.0-RC2'
+    compileOnly 'org.dominokit:domino-mvp-apt-client:2.0.0-RC2'
+
+    annotationProcessor 'org.dominokit:domino-mvp-api-client:2.0.0-RC2'
+    compileOnly 'org.dominokit:domino-mvp-api-client:2.0.0-RC2'
 
     // GWTがJUnit5をサポートしていないためJUnit4を使用する
     testImplementation 'junit:junit:4.13.2'
+
+    testImplementation 'org.mockito:mockito-core:5.17.0'
 }
 
 gwt {
-    gwtVersion = '2.12.1'
+    gwtVersion = '2.12.2'
     modules = [ 'io.github.k7t3.horzcv.HorzCV' ]
+
+    // DominoKitはトランスパイル時のメモリ使用量が大きい
+    maxHeapSize = '1024M'
 
     sourceLevel = '17'
 
@@ -45,6 +67,9 @@ gwt {
 
     generateJsInteropExports = true
 
+    // Optional: Script output style: DETAILED, OBFUSCATED or PRETTY (defaults to OBFUSCATED)
+    //style = 'OBFUSCATED'
+    style = 'DETAILED'
 
     // Optional: Configures the GWT compiler
     compiler {
@@ -53,14 +78,15 @@ gwt {
         //
 
         // Optional: Sets the optimization level used by the compiler (0=none, 9=maximum)
-        optimize = 9
+        //optimize = 9
+        optimize = 0
 
         // Optional: Compile a report that tells the "Story of Your Compile" (defaults to OFF)
         compileReport = true
 
         draftCompile = true
 
-        compiler.style = 'OBFUSCATED'
+        //compiler.style = 'OBFUSCATED'
     }
 
 
@@ -79,7 +105,7 @@ gwt {
         // grettyで起動するサーバーのURL
         startupUrl = 'http://localhost:8080/'
 
-        devMode.style = 'OBFUSCATED'
+        //devMode.style = 'OBFUSCATED'
 
         devMode.generateJsInteropExports = true
     }
@@ -147,6 +173,7 @@ tasks.register('gwtCompileForDeploy') {
         }
 
         // サーブレットコンテナ向けのファイルを削除
+        gwt.war.get().file('context.xml').asFile.delete()
         def webInf = gwt.war.dir('WEB-INF').get()
         webInf.file('web.xml').asFile.delete()
         webInf.asFile.delete()
