- Firebaseデプロイ用GitHub Actionsワークフローファイルを追加 - Firebase設定ファイル (`firebase.json`, `.firebaserc`) を追加 - GWTビルドプロセスをワークフローに統合

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+### Node.js ###
+package-lock.json
+
+### Firebase ###
+.firebase/
+firebase-debug.log*
+firebase-debug.*.log*
