--- a/horzcv-server/build.gradle
+++ b/horzcv-server/build.gradle
@@ -9,7 +9,7 @@ version = '1.0-SNAPSHOT'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(serverJavaVersion)
     }
 }
 
@@ -20,7 +20,7 @@ tomcat {
     port = 8080
 
     webapp(project) {
-        contextPath = 'app'
+        contextPath = '' // root context
     }
 }
 
@@ -31,7 +31,7 @@ tomcatRun {
 dependencies {
     implementation project(':horzcv-shared')
 
-    compileOnly 'jakarta.servlet:jakarta.servlet-api:6.1.0'
+    compileOnly "jakarta.servlet:jakarta.servlet-api:$servletVersion"
 
     // Weld CDI
     implementation 'org.jboss.weld.servlet:weld-servlet-core:6.0.2.Final'
@@ -42,24 +42,21 @@ dependencies {
     // Google API: Youtube Data API, Firestore
     implementation 'com.google.apis:google-api-services-youtube:v3-rev20250128-2.0.0'
     implementation 'com.google.api-client:google-api-client-jackson2:2.7.2'
-    implementation 'com.google.http-client:google-http-client-appengine:1.46.1'
-    implementation 'com.google.cloud:google-cloud-firestore:3.30.9'
 
     // Twitch
     implementation 'com.github.twitch4j:twitch4j:1.24.0'
 
     // Logging SLF4J
-    implementation 'org.slf4j:slf4j-api:2.0.16'
-    implementation 'org.slf4j:slf4j-jdk-platform-logging:2.0.16'
+    implementation "org.slf4j:slf4j-api:$slf4jVersion"
+    implementation "org.slf4j:slf4j-jdk-platform-logging:$slf4jVersion"
 
     // Logging Implementation
-    implementation 'ch.qos.logback:logback-classic:1.5.7'
+    implementation 'ch.qos.logback:logback-classic:1.5.18'
 
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
 
     testImplementation 'org.mockito:mockito-junit-jupiter:5.15.2'
-
     testImplementation 'org.eclipse.jetty.ee10:jetty-ee10-servlet:12.0.16'
 }
 
