--- a/firebase.json
+++ b/firebase.json
@@ -1,11 +1,19 @@
 {
   "hosting": {
-    "public": "build/gwt/js",
+    "public": "horzcv-client/build/gwt/js",
     "ignore": [
       "firebase.json",
       "**/.*"
     ],
     "rewrites": [
+      {
+        "source": "**/api/**",
+        "function": {
+          "functionId": "api",
+          "region": "us-central1"
+        }
+      },
+
       {
         "source": "**",
         "destination": "/index.html"
